<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/topLayout">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/exoPlayerView"
                app:resize_mode="fill"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/noVideoIv"
                android:src="@drawable/novideo"
                android:visibility="gone"
                android:scaleType="centerCrop"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/thumbnailurl"
                android:src="@drawable/ic_back"
                android:visibility="gone" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/bottomLayout"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stepDescription_tv"
                android:textColor="@android:color/black"
                android:textSize="@dimen/step_detail_tv_size"
                android:padding="@dimen/step_detail_padding"
                android:layout_marginBottom="@dimen/step_detail_padding"
                android:freezesText="true"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/nextVideoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_next"
                    app:fabSize="auto" />


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/prevVideoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_back"
                    app:fabSize="auto" />

                <TextView
                    android:id="@+id/currentStep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/step_number_size" />
            </RelativeLayout>

        </FrameLayout>

    </LinearLayout>

</ScrollView>