<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chihurmnanyanwanevu.bakingapp.ui.activities.RecipeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noWifiIv"
        android:src="@drawable/nointernet"
        android:scaleType="fitXY"/>

    <!-- Phone -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recipesRecyclerView"
        android:background="@color/colorBackground"
        android:tag="phone">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
